modified:   IT&C101Project/Bruce.html modified:   IT&C101Project/Osaka.html

--- a/IT&C101Project/Bruce.html
+++ b/IT&C101Project/Bruce.html
@@ -53,7 +53,7 @@ p {
             <li>Basketball</li>
             <li>Free weights</li>
             <li>Yoga</li>
-            <li>Japanese culture (<em>especially <a href="file:///Users/bruceweygandt/Documents/IT&C101/Fianl_project/%3C!DOCTYPE%20html%3E.html"> Osaka</a>)</em></li>
+            <li>Japanese culture (<em>especially <a href="Osaka.html"> Osaka</a>)</em></li>
             <li>Music</li>
             <li>Food</li>
         </ul>
@@ -86,5 +86,12 @@ p {
         return i;
         }
         </script>
+            <button id="HomepageButton">Return to homepage</button>
+
+            <script>
+            document.getElementById("HomepageButton").addEventListener("click", function() {
+              window.location.href = "Homepage.html";
+            });
+            </script>
     </body>
 </html>
