--- a/IT&C101Project/Osaka.html
+++ b/IT&C101Project/Osaka.html
@@ -93,6 +93,13 @@ address {
         <p><script>document.write(new Date().toLocaleString())</script></p>
         <iframe width="800" height="500" src="/Users/bruceweygandt/Desktop/OSAKA, JAPAN.pdf"</iframe>
         <a href= "mailto: brucebasketball2024@gmail.com"> If you are interested in learning more about Osaka and/or Japan please contact us.</a>
+        <button id="HomepageButton">Return to homepage</button>
+
+        <script>
+        document.getElementById("HomepageButton").addEventListener("click", function() {
+          window.location.href = "Homepage.html";
+        });
+        </script>
     </body>
 <html>
     
